@@ -1,15 +1,6 @@
 from icecube.load_pybindings import load_pybindings
 from icecube import icetray, tableio, dataio
 
-import sys
-major,minor = sys.version_info[:2]
-# pytables only runs on 2.4 anyhow, and this script uses decorators
-if (major, minor) >= (2, 4):
-    from icecube.hdfwriter import pytables_ext
-
-# clean the local dictionary
-del sys,major,minor
-
 load_pybindings(__name__, __path__)
 
 @icetray.traysegment_inherit(tableio.I3TableWriter,
